<resources>
    <string name="app_name">Login</string>
    <string name="Login_button">登陆</string>
    <string name="Forgrt_button">忘记密码</string>
    <string name="register_button">立即用手机号注册账号</string>
    <string name="account_editText">输入手机号</string>
    <string name="password_editText">输入密码</string>
    <string name="title_text">登陆</string>
    <string name="registerAccount_Text">昵称</string>
    <string name="registerPassword_editText">密码</string>
    <string name="registerFinish_button">注册</string>
    <string name="register_text">注册</string>
    <string name="registerAccount_editText">手机号</string>
</resources>
