<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorThinWhite"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:padding="16dp"
        android:background="@color/colorRed"
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/textView"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:background="@drawable/corners"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="0.02">


        <EditText
            android:id="@+id/account_editText"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/account_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/password_editText"
            android:hint="@string/password_editText"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="end|bottom">

            <Button
                android:textColor="@color/colorGreen"
                android:text="@string/Forgrt_button"
                android:background="@color/colorWhite"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/login_button"
                android:textColor="@color/colorGreen"
                android:text="@string/Login_button"
                android:background="@color/colorWhite"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:gravity="center"
        android:background="@drawable/corners"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:textColor="@color/colorGreen"
        android:id="@+id/register_button"/>
</LinearLayout>
